2007-05-28  Doug Hellmann  <doug.hellmann@gmail.com>

	* models.py (Podcast.as_dict): Remove the monitor_feed info, since
	we no longer want to use a single monitor feed for each original
	feed.

	* views.py: Use a local, named, logger.

	* util.py: Use a local, named, logger.

	* urls.py: Change rss link to queue to be more clear.  Change
	definition of the monitor feed.

	* templates/user.html: Add links to the queue and monitor RSS
	feeds.

	* models.py: Use a local, named logger.

	* feeds.py (MonitorFeed): Convert ProxyFeed to MonitorFeed and
	include all of the user's podcasts in a single feed.

	* download_cache.py: Use a local, named, logger.  Use a private
	copy of feedparser.

2007-01-28  Doug Hellmann  <dhellmann@racemi.com>

	* views.py (change_subscriptions): Error conditions are checked in
	the decorators now, so do not check them in the view.

	* util.py (same_user_only): If the current user is not the same as
	the required user, redirect to the login page.

2007-01-27  Doug Hellmann  <dhellmann@racemi.com>

	* models.py (Podcast.get_monitor_url): Pull the logic for building
	the monitoring URL out fo as_dict.

	* templates/subscriptions.opml: Use our own monitoring feed for
	the xmlUrl value, instead of linking directly back to the original
	feed.

	* views.py (subscriptions): Add url_prefix to the context
	information so the template can use it to build up the URL.

	* models.py (Podcast.Admin): Show the users who are subscribed to
	the feed.

2007-01-22  Doug Hellmann  <dhellmann@racemi.com>

	* templates/user.html: Use the feed.png that matches the other
	icons.

	* models.py (Podcast.as_dict): Include the monitor_url in the
	response.

	* views.py (_do_add_to_queue): New function to avoid repeating the
	add-to-queue code.
	(queue): Call _do_add_to_queue.
	(add_to_queue): New view method to add an item to the queue then
	show the user page with the full queue.

	* urls.py (urlpatterns): Organize different URLs into separate